--- a/index_dokumentationssite.html
+++ b/index_dokumentationssite.html
@@ -70,31 +70,32 @@
     <!-- TITLE SLUT -->
 
     <div id="experience_map">
-        <div class="sectionwrapper">
-            <h1>Experience Map</h1>
-            <div class="column">
-            </div>
-            <div class="column">
-                <img src="img/Ep-chart2.jpg">
-                <h2>Idebeskrivelse - Vejledningskø</h2>
+        <h1>Experience Map</h1>
+        <div class="column1">
+            <img src="img/Ep-chart2.jpg">
+            <h2>Idebeskrivelse - Vejledningskø</h2>
 
-                <p><b>Problem:</b> vejledningskøen er for lang og for individuel - ofte når man ikke at få hjælp
-                    <br><b>Formål:</b> at mindske ventetiden og organisere hjælpen bedre. Man bruger appen, som en erstatning af vejledningskøen. Dvs. når man er gået i stå, og har et spørgsmål, kan man få hjælp og se hvornår og af hvem.</p>
+            <p><b>Problem:</b> vejledningskøen er for lang og for individuel - ofte når man ikke at få hjælp
+                <br><b>Formål:</b> at mindske ventetiden og organisere hjælpen bedre. Man bruger appen, som en erstatning af vejledningskøen. Dvs. når man er gået i stå, og har et spørgsmål, kan man få hjælp og se hvornår og af hvem.</p>
+            <img src="img/Ep-chart1.jpg">
+        </div>
 
-                <img src="img/Ep-chart1.jpg">
-                <h2>Idebeskrivelse - Skema
-                </h2>
+        <div class="column2">
+            <h2>Idebeskrivelse - Skema
+            </h2>
 
-                <p><b>Udgangspunkt:</b> At skabe et bedre fællesskab på kea. Det kan være svært at se ugeplan, men det skal blive lettere med denne app. Man skal kunne få hurtigere noget information om, hvad ens skulle gøre.
+            <p><b>Udgangspunkt:</b> At skabe et bedre fællesskab på kea. Det kan være svært at se ugeplan, men det skal blive lettere med denne app. Man skal kunne få hurtigere noget information om, hvad ens skulle gøre.
 
-                    <br>Man henter app’en på sin telefon, hvis man går på kea. Denne app giver et overblik over hverdages plan, og man kan forberede sig til næste dag undervisning, samt hvis man har bruge for at hurtig kigge, hvad vi skal have i næste timer. I appen står en månedlig kalender, hvor man klikker på dagen, og ser hvad er dagens planet. Appen kan linke til gruppe list og aflevering information.
-                </p>
-                <img src="img/Ep-chart3.jpg">
-                <h2>Idebeskrivelse - Det sociale liv på kea
-                </h2>
-                <p><b>Udgangspunkt:</b> At skabe et bedre fællesskab på kea. Det kan være svært at få nye venner, men det skal blive lettere med denne app. Man skal kunne tilmelde sig sociale arrangementer, som elever, undervisere eller andre kan tilbyde.
-                    <br> Man henter app’en på sin telefon, hvis man går på kea. Denne app opdaterer en i forhold det sociale liv på kea. Dvs. man får notifikationer, når der sker noget, fx fredagsbarer. Yderligere kan man skrive opslag derinde. Fx spørge om nogle vil med i byen efter fredagsbar. De kan melde sig til, og så er de pludselig en gruppe, som ikke har snakket så meget sammen før, som kan lære hinanden bedre at kende. På denne måde kan keas elever få et tættere forhold udover skolen. Det behøver ikke kun omhandle fredagsbarer, men også andre aktiviteter ift. kea. Fx notifikationer om .1 semesters fernisering eller andet. </p>
-            </div>
+                <br>Man henter app’en på sin telefon, hvis man går på kea. Denne app giver et overblik over hverdages plan, og man kan forberede sig til næste dag undervisning, samt hvis man har bruge for at hurtig kigge, hvad vi skal have i næste timer. I appen står en månedlig kalender, hvor man klikker på dagen, og ser hvad er dagens planet. Appen kan linke til gruppe list og aflevering information.
+            </p>
+            <img src="img/Ep-chart3.jpg">
+        </div>
+        <div class="column3">
+            <h2>Idebeskrivelse - Det sociale liv på kea
+            </h2>
+            <p><b>Udgangspunkt:</b> At skabe et bedre fællesskab på kea. Det kan være svært at få nye venner, men det skal blive lettere med denne app. Man skal kunne tilmelde sig sociale arrangementer, som elever, undervisere eller andre kan tilbyde.
+                <br> Man henter app’en på sin telefon, hvis man går på kea. Denne app opdaterer en i forhold det sociale liv på kea. Dvs. man får notifikationer, når der sker noget, fx fredagsbarer. Yderligere kan man skrive opslag derinde. Fx spørge om nogle vil med i byen efter fredagsbar. De kan melde sig til, og så er de pludselig en gruppe, som ikke har snakket så meget sammen før, som kan lære hinanden bedre at kende. På denne måde kan keas elever få et tættere forhold udover skolen. Det behøver ikke kun omhandle fredagsbarer, men også andre aktiviteter ift. kea. Fx notifikationer om .1 semesters fernisering eller andet. </p>
+
         </div>
     </div>
     <div id="persona">
@@ -113,54 +114,71 @@
             </div>
         </div>
     </div>
-    <div id="testsyoutube">
-        <h1>Videodokumentation af test</h1>
-        <h2>for at se de 3 testresultater af paper-prototype:
-        </h2>
-        <h3><a href="https://www.youtube.com/playlist?list=PLAEZffhQsnCkDFLz2STC5Ib9T784y-E2t" target="_blank">Klik Her</a></h3>
+
+    <div id="sectionwrapper_test">
+        <div class="testsyoutube">
+            <h1>Videodokumentation af test</h1>
+            <h2>for at se de 3 testresultater af paper-prototype:
+            </h2>
+            <h3><a href="https://www.youtube.com/playlist?list=PLAEZffhQsnCkDFLz2STC5Ib9T784y-E2t" target="_blank">Klik Her</a></h3>
+        </div>
+
+        <div class="keapp_test_1">
+
+            <h1>Testresultat 1 - KeApp</h1>
+            <h2>For at se analysen:</h2>
+            <h3><a href="https://docs.google.com/document/d/1rAPz3O0ZGhYU7Zjn2O2ttA6JmBPr0RNpyVxpU6P6mOU/edit" target="_blank">Klik Her</a></h3>
+
+        </div>
+
+
+        <div class="kea_skema_test_2">
+            <h1>Testresultat 2 - Kea skema</h1>
+            <h2>For at se analysen:</h2>
+            <h3><a href="https://docs.google.com/document/d/1PHgKgljE78jGn_9dizJ_qhI0O0UsetMsgwh3Li-Y91Q/edit" target="_blank">Klik Her</a></h3>
+
+        </div>
+
+        <div class="kea_social_life_test_3">
+
+            <h1>Testresultat 3 - Kea social life</h1>
+            <h2>For at se analysen:</h2>
+            <h3><a href="https://docs.google.com/document/d/1CcTm2ndyMZkS6cNGlnJAKgW9qTJLw5RF-lYnGAZjEXQ/edit" target="_blank">Klik Her</a></h3>
+
+        </div>
     </div>
 
-    <div id="keapp_test_1">
 
-        <h1>Testresultat 1 - KeApp</h1>
-        <h2>For at se analysen:</h2>
-        <h3><a href="https://docs.google.com/document/d/1rAPz3O0ZGhYU7Zjn2O2ttA6JmBPr0RNpyVxpU6P6mOU/edit" target="_blank">Klik Her</a></h3>
-
-    </div>
-
-
-    <div id="kea_skema_test_2">
-        <h1>Testresultat 2 - Kea skema</h1>
-        <h2>For at se analysen:</h2>
-        <h3><a href="https://docs.google.com/document/d/1PHgKgljE78jGn_9dizJ_qhI0O0UsetMsgwh3Li-Y91Q/edit" target="_blank">Klik Her</a></h3>
-
-    </div>
-
-    <div id="kea_social_life_test_3">
-
-        <h1>Testresultat 3 - Kea social life</h1>
-        <h2>For at se analysen:</h2>
-        <h3><a href="https://docs.google.com/document/d/1CcTm2ndyMZkS6cNGlnJAKgW9qTJLw5RF-lYnGAZjEXQ/edit" target="_blank">Klik Her</a></h3>
-
-    </div>
-
-    <div id="benchmark">
+    <div id="valgide">
         <h1>Valg af ide</h1>
         <h2>For at se benchmark resultater:</h2>
         <h3><a href="https://docs.google.com/document/d/1UT2WmzexWJ2wF93jkIOeQGb9fl2h6OYdNC4BKbWiIUI/edit" target="_blank">Klik Her</a></h3>
 
-
-    </div>
-    <div id="Storyboard">
-        <h1>Storyboard</h1>
-        <img src="img/keaskema/kea_skema_storyboard%20-%20final.jpg"> </div>
-    <div class="valgide">
-        <h1>Valg af ide</h1>
         <h2><b>For at se paper prototype:</b>
         </h2>
         <p>(video hedder kea skema test2 - 5:01min)</p>
         <h3><a href="https://docs.google.com/document/d/1UT2WmzexWJ2wF93jkIOeQGb9fl2h6OYdNC4BKbWiIUI/edit" target="_blank">Klik Her</a></h3>
+        <div class="Storyboard">
+            <h1>Storyboard</h1>
+            <img src="img/keaskema/kea_skema_storyboard%20-%20final.jpg"> </div>
     </div>
+    <!--    design proces-->
+
+    <div id="styltile">
+
+        <h1>Design Proces</h1>
+        <h2>For at se:
+            <br>Moodboard
+            <br>UI-Kits
+            <br>Typografi, farver, former
+            <br>App Ikon
+            <br>Styletile
+        </h2>
+        <h3><a href="https://drive.google.com/drive/folders/1ZzvkoixCAyC49_MJZBiL6ZSE9FyPN4v2?ths=true" target="_blank">Klik Her</a></h3>
+
+    </div>
+
+
 
     <!-- LINKS START -->
     <div id="sectionwrapper_links">
@@ -168,10 +186,7 @@
             <h2>Se vores daily scrum meetings:</h2>
             <h3><a href="https://www.youtube.com/playlist?list=PL4zIEw1FWk8YYhV9RbAuBz5jlsfM1pXOr" target="123">Klik Her</a></h3>
         </div>
-        <div class="burndownchart">
-            <h2>Se vores burn-down charts:</h2>
-            <h3><a href="https://docs.google.com/document/d/1q0QLlZrljZrl2MqPPwOBhPeQYogrMil_p3Q9aCufByQ/edit" target="_blank">Klik Her</a></h3>
-        </div>
+
         <div class="trello">
             <h2>Se vores Trelloboard:</h2>
             <h3><a href="https://trello.com/b/vVRKYMUF/gruppe-11-ux" target="_blank">Klik Her</a></h3>
@@ -187,6 +202,15 @@
 
     </div>
     <!-- LINKS SLUT -->
+    <div id="burndownchart">
+        <div class="burndownchart">
+            <h2>Burn-down chart</h2>
+            <img src="img/burndownchart.jpg">
+        </div>
+
+    </div>
+
+
     <!-- NAVNE START -->
     <div id="sectionwrapper_medlem">
         <div class="gruppenavne">
