insæt link i html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 
         <div id="pitch_link">
             <h1>Pitch</h1>
-            <a href="indsæt link" target="_blank" alt="Pitch">LINK</a>
+            <a href="https://docs.google.com/document/d/11ykjoLqRAbhxqzCmkZ3gQoc5RiZQGHq29gsNjKdew24/edit?usp=sharing" target="_blank" alt="Pitch">LINK</a>
+            <h1>Slide</h1>
+            <a href="https://docs.google.com/presentation/d/1-hmrXkngqJV7hnrdPT5iP2Y1gdWL2zIA_FLNSg8RMYM/edit?usp=sharing" target="_blank" alt="Pitch">LINK</a>
         </div>
         <!-- LINK TIL PITCH SLUT RD --->
 
