--- a/index_dokumentationssite.html
+++ b/index_dokumentationssite.html
@@ -215,9 +215,11 @@
     <div id="sectionwrapper_medlem">
         <div class="gruppenavne">
             <h4>Ida Lygum Pedersen</h4>
-            <h4>Toni Anh Quoc Nguyen</h4>
-            <h4>Mahnaz Hashemiaghdam</h4>
-            <h4>Frederik Erichsen</h4>
+                <h4>Toni Anh Quoc Nguyen</h4>
+                <h4>Mahnaz Hashemiaghdam</h4>
+                <h4>Frederik Erichsen</h4>
+                <h4>Rikke Dyreby</h4>
+                <h4>Simone Juul Andersen</h4>
         </div>
 
     </div>
