--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="content">
         <!-- TITLE START -->
-    <div id="overskrift">
+        <div id="overskrift">
             <h1>PRÆSENTATIONSSITE</h1>
         </div>
 
@@ -33,7 +33,7 @@
 
         <div id="pitch_link">
             <h1>Pitch</h1>
-            <a href="indsæt link" target="_blank" alt="Pitch">LINK</a>
+            <a href="http://frederikerichsen.dk/Kea/04_ux/04_01_06_Dokumentationsdelen/PDF/Pitch_Slide.pdf" target="_blank" alt="Pitch">LINK</a>
         </div>
         <!-- LINK TIL PITCH SLUT RD --->
 
@@ -67,7 +67,7 @@
             </p>
             <br>
 
-               <h3> Benefits:
+            <h3> Benefits:
             </h3>
             <p>
                 Med Kea Skema app kan målgruppen sikre sig et skema, der både er tidsbesparende og overskueligt at bruge. Det vil være muligt at tjekke sit skema på flere platforme, hvilket gør app’en flexibel, let tilgængelig og brugervenlig på mobilen, tablet og computer, både online og offline.</p>
