--- a/index_dokumentationssite.html
+++ b/index_dokumentationssite.html
@@ -178,7 +178,7 @@
             <br>App Ikon
             <br>Styletile
         </h2>
-        <h3><a href="http://frederikerichsen.dk/Kea/04_ux/04_01_06_Dokumentationsdelen/styletile/Gruppe_11_ideudvikling_og_styletile.pdf" target="_blank">Klik Her</a></h3>
+        <h3><a href="http://frederikerichsen.dk/Kea/04_ux/04_01_06_Dokumentationsdelen/PDF/Gruppe_11_ideudvikling_og_styletile.pdf" target="_blank">Klik Her</a></h3>
     </div>
 
     <!-- LINKS START -->
@@ -187,7 +187,7 @@
 
         <div class="daily_scrum">
             <h2>Se vores daily scrum meetings:</h2>
-            <h3><a href="hthttps://www.youtube.com/playlist?list=PL4zIEw1FWk8YYhV9RbAuBz5jlsfM1pXOr" target="_blank">Klik Her</a></h3>
+            <h3><a href="https://www.youtube.com/playlist?list=PL4zIEw1FWk8YYhV9RbAuBz5jlsfM1pXOr" target="_blank">Klik Her</a></h3>
         </div>
 
 
