XD-Prototype: Forberedelse & Kommentarer

--- a/index_dokumentationssite.html
+++ b/index_dokumentationssite.html
@@ -179,7 +179,13 @@
             <br>Styletile
         </h2>
         <h3><a href="http://frederikerichsen.dk/Kea/04_ux/04_01_06_Dokumentationsdelen/PDF/Gruppe_11_ideudvikling_og_styletile.pdf" target="_blank">Klik Her</a></h3>
+        <div class="xdprototype">
+            <h2>Test af XD-Prototype: Forberedelse og Kommentarer
+            </h2>
+            <h3><a href="https://docs.google.com/document/d/1kkgBOgjIytOg5jzzYq5EILZcb-8a4zAWYgf1QbZ05Cs/edit" target="_blank">Klik Her</a></h3>
+        </div>
     </div>
+
 
     <!-- LINKS START -->
     <div id="sectionwrapper_links">
