--- a/index_dokumentationssite.html
+++ b/index_dokumentationssite.html
@@ -28,13 +28,13 @@
                 <a href="#experience_map">
                     <li>Experience Map</li>
                 </a>
-                <a href="#experience_map">
+                <a href="#column1">
                     <li>KeApp - Test 1</li>
                 </a>
-                <a href="#experience_map">
+                <a href="#column2">
                     <li>Kea Skema - Test 2</li>
                 </a>
-                <a href="#experience_map">
+                <a href="#column3">
                     <li>Kea Social Life - Test 3</li>
                 </a>
                 <a href="#persona">
@@ -74,7 +74,7 @@
 
     <div id="experience_map">
 
-        <div class="column1">
+        <div id="column1">
             <h1>Experience Map</h1>
             <h2>Idebeskrivelse - Vejledningskø</h2>
 
@@ -83,7 +83,7 @@
             <img src="img/Ep-chart1.jpg">
         </div>
 
-        <div class="column2">
+        <div id="column2">
             <h2>Idebeskrivelse - Skema
             </h2>
 
@@ -93,7 +93,7 @@
             </p>
             <img src="img/Ep-chart2.jpg">
         </div>
-        <div class="column3">
+        <div id="column3">
             <h2>Idebeskrivelse - Det sociale liv på kea
             </h2>
             <p><b>Udgangspunkt:</b> At skabe et bedre fællesskab på kea. Det kan være svært at få nye venner, men det skal blive lettere med denne app. Man skal kunne tilmelde sig sociale arrangementer, som elever, undervisere eller andre kan tilbyde.
